styles.css
:root {
  --horizontal-padding: clamp(20px, 15vw, 100px);

  /* colors */
  --blue: #3882f6;
  --dark-blue: #1f2937;
  --gray: #82878f;
  --light-gray: #e5e7eb;
  --white: #f9faf8;

  /* font sizes */
  --xsmall: 14px;
  --small: 18px;
  --medium: 24px;
  --large: 36px;
  --xlarge: 48px;

  /* font weights */
  --thin: 300;
  --normal: 400;
  --bold: 900;

  /* TODO: define font size vars */
}

body {
  margin: 0;
}

#main {
  font-family: "Roboto";
  font-weight: var(--normal);
}

.button {
  width: fit-content;
  padding: 5px clamp(15px, 5vw, 30px);
  border-radius: 5px;
  background-color: var(--blue);
  color: var(--white);
}

#hero-logo {
  font-size: var(--medium);
  font-weight: var(--bold);
  color: var(--white);
}

/* #region: NAVBAR */

#navbar {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  padding: 10px var(--horizontal-padding);
  gap: 20px;

  background-color: var(--dark-blue);
  color: var(--white);
}

#navbar-links {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
}

/* #endregion */

/* #region: HERO */

#hero {
  display: flex;
  justify-content: center;
  padding: 70px var(--horizontal-padding);

  background-color: var(--dark-blue);
  color: var(--white);
}

#hero-content {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 20px;
}

#hero-text {
  /* sizing is dynamic, but min-width is 300px */
  flex: 1 1 300px;
  min-width: 0;
  max-width: 500px;

  display: flex;
  flex-direction: column;
  gap: 10px;
}

#hero-main-text {
  font-size: var(--xlarge);
  font-weight: var(--bold);
  color: var(--white);
}

#hero-secondary-text,
.header-link-text {
  font-size: var(--xsmall);
  color: var(--light-gray);
}

#hero-placeholder-img {
  padding: 60px 40px;
  background-color: var(--gray);
}

/* #endregion */

/* #region: INFO HEADER */

#info-header {
  display: flex;
  flex-direction: column;
  gap: 30px;
  padding: 50px var(--horizontal-padding);

  background-color: var(--white);
}

#info-header-text {
  text-align: center;
  font-size: var(--large);
  font-weight: var(--bold);
  color: var(--dark-blue);
}

#placeholder-img-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 40px;
}

.placeholder-img-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;
  width: 150px;
}

.placeholder-img {
  width: 150px;
  aspect-ratio: 1/1;
  border: 2px solid var(--blue);
  border-radius: 10px;
}

.placeholder-img-caption {
  text-align: center;
  font-size: var(--xsmall);
  color: var(--gray);
}

/* #endregion */

/* #region: QUOTE SECTION */

#quote-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 70px var(--horizontal-padding);

  background-color: var(--light-gray);
  color: var(--dark-blue);
}

#quote-section-content {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  gap: 10px;

  /* match width of info header section, but don't exceed viewport width */
  max-width: min(760px, 100%);
}

.quote {
  font-size: var(--large);
  font-weight: var(--thin);
  font-style: italic;
}

.quote-source {
  align-self: flex-end;
  max-width: 100%;
  font-size: var(--small);
  font-weight: var(--bold);
}

/* #endregion */

/* #region: CTA SECTION */

#cta-section {
  display: flex;
  justify-content: space-around;
  padding: 70px var(--horizontal-padding);

  background-color: var(--white);
  color: var(--white);
}

#cta-content {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  gap: 20px 40px;
  padding: 40px var(--horizontal-padding);
  border-radius: 5px;
  max-width: 100%;

  background-color: var(--blue);
}

#cta-text {
  /* sizing is dynamic, but min-width is 200px */
  flex: 1 1 200px;
  min-width: 0;

  display: flex;
  flex-direction: column;
  max-width: fit-content;
}

#cta-primary-text {
  font-size: var(--small);
  font-weight: var(--bold);
}

#cta-secondary-text {
  font-size: var(--xsmall);
  font-weight: var(--thin);
}

#cta-button {
  border: 2px solid var(--white);
  border-radius: 5px;
}

/* #endregion */

/* #region: FOOTER */

#footer {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 30px var(--horizontal-padding);

  background-color: var(--dark-blue);
  color: var(--white);
  font-size: var(--xsmall);
  font-weight: var(--thin);
}

/* #endregion */

